part2/2_2/manifests/deployment-todo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-kub-todolist-backend-2-2-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-kub-todolist-backend-2-2
  template:
    metadata:
      labels:
        app: dev-kub-todolist-backend-2-2
    spec:
      containers:
        - name: todolist
          image: niklasku/dev_kub_todolist_backend:2_2_2
