part2/2_2/manifests/service-todo-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
spec:
  type: ClusterIP
  selector:
    app: dev-kub-todolist-backend-2-2
  ports:
    - name: todolist-backend
      port: 3001
      protocol: TCP
      targetPort: 3001
