part2/2_2/manifests/service-todo.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-kub-todo-list-scv
spec:
  type: ClusterIP
  selector:
    app: dev-kub-todolist-2-2
  ports:
    - name: todolist
      port: 2345
      protocol: TCP
      targetPort: 3000
